--- a/index.html
+++ b/index.html
@@ -102,6 +102,27 @@
 
           <!-- slider ends here -->
 
+          <!-- categories start here -->
+          <main>
+            <section>
+                <div class="container overflow-hidden text-center my-5">
+                    <div class="row gy-5">
+                      <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-light">Custom column padding</div>
+                      </div>
+                      <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-light">Custom column padding</div>
+                      </div>
+                      <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-light">Custom column padding</div>
+                      </div>
+                      
+                    </div>
+                  </div>
+            </section>
+          </main>
+          <!-- categories ends here -->
+
 
         </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
