--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <h2>Cool Dude headphone</h2>
                             <p>This is the best headphone in the world for people who just want to waste time in front of funky world</p>
                             <h1>$420</h1>
-                            <div class="btn btn-warning">Buy Warning</div>
+                            <div class="btn btn-warning">Buy Now</div>
                             </div>
                         </div>
                         <div class="col-lg-5">
@@ -62,7 +62,7 @@
                             <h2>Mega LCD TV For Sports</h2>
                             <p>This is the best TV in the world for people who just want to waste time in front of tv</p>
                             <h1>$1200</h1>
-                            <div class="btn btn-warning">Buy Warning</div>
+                            <div class="btn btn-warning">Buy Now</div>
                             </div>
                         </div>
                         <div class="col-lg-5">
@@ -79,7 +79,7 @@
                             <h2>X-Box for your living room</h2>
                             <p>This is the best x-box in the world for people who just want to waste time in front of fake sports</p>
                             <h1>$600</h1>
-                            <div class="btn btn-warning">Buy Warning</div>
+                            <div class="btn btn-warning">Buy Now</div>
                             </div>
                         </div>
                         <div class="col-lg-5">
@@ -107,21 +107,78 @@
             <section>
                 <div class="container overflow-hidden text-center my-5">
                     <div class="row gy-5">
+                        <!-- single category -->
                       <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border bg-light">Custom column padding</div>
+                        <div class="p-3 border bg-warning rounded-3 d-flex align-items-center">
+                            <h1 class="text-white">Watch</h1>
+                            <img src="images/categories/watch.png" alt="">
+                        </div>
                       </div>
+                        <!-- single category -->
                       <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border bg-light">Custom column padding</div>
+                        <div class="p-3 border bg-success rounded-3 d-flex align-items-center">
+                            <h1 class="text-white">Bags</h1>
+                            <img src="images/categories/bag.png" alt="">
+                        </div>
                       </div>
+                        <!-- single category -->
                       <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border bg-light">Custom column padding</div>
+                        <div class="p-3 border bg-primary rounded-3 d-flex align-items-center">
+                            <h1 class="text-white">Shoes</h1>
+                            <img src="images/categories/shoes.png" alt="">
+                        </div>
                       </div>
-                      
                     </div>
                   </div>
             </section>
+            <!-- categories ends here -->
+
+            <!-- Shoes section start here -->
+            <section class="container my-5">
+                <h2>Shoes</h2>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Supply 350</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                          <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Nike 360</h5>
+                          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Nike Airmax</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+            </section>
           </main>
-          <!-- categories ends here -->
+          
+
 
 
         </header>
