--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="">
@@ -22,13 +22,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#Shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Bags</a>
+                    <a class="nav-link" href="#Bags">Bags</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#Subscribe">Subscribe</a>
                   </li>
                 </ul>
               </div>
@@ -98,6 +98,7 @@
                 </button>
               </div>
           </section>
+    </header>
 
 
           <!-- slider ends here -->
@@ -134,7 +135,7 @@
             <!-- categories ends here -->
 
             <!-- Shoes section start here -->
-            <section class="container my-5">
+            <section class="container my-5" id="Shoes">
                 <h2>Shoes</h2>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                     <div class="col">
@@ -176,12 +177,74 @@
                   </div>
 
             </section>
+            <!-- Backpack section start here -->
+            <section class="container my-5" id="Bags">
+                <h2>Backpack</h2>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Red Laltu bag</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                          <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Blue Niltu Bag</h5>
+                          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">black kaltu Bag</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+            </section>
+
+            <!-- Subscribe start -->
+            <section style="height: 300px;" class="container rounded-3 d-flex justify-content-center align-items-center bg-info" id="Subscribe">
+                <div>
+                    <h2>LETS STAY IN TOUCH</h2>
+                <P>Get updates on sales, specials and more</P>
+                <form>
+                    <div class="mb-1">
+                      <label for="exampleInputEmail1" class="form-label">Email address</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </form>
+                </div>
+
+            </section>
           </main>
+          <footer class="mt-5 text-center">
+            <p><small>©2023. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+          </footer>
           
 
 
 
-        </header>
+        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
